Bug 288338 - Kmail breaks on .ics file attachments if no calendar resource is available.
Summary: Kmail breaks on .ics file attachments if no calendar resource is available.
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.7
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-06 14:47 UTC by Peter Lewis
Modified: 2011-12-20 08:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Lewis 2011-12-06 14:47:07 UTC
Version:           4.7 (using KDE 4.7.3) 
OS:                Linux

If there is no calendar resource available (i.e. you have not created one yet), then receiving an email with a .ics (an ical file) attachment causes problems for kmail. I have the preview pane enabled, and the message does not display in it. I just get the blue screen telling me that it is trying to load the folder.

Selecting any other message leads to the same behaviour and no messages can be viewed until kmail is restarted. This is not an akonadi problem, just one triggered by trying to display ical attachments inline, I believe, when there is no calendar resource.

Thanks.

Reproducible: Always

Steps to Reproduce:
1) Remove all calendar resources.
2) Ensure the preview pane is enabled in kmail.
3) Select an email in kmail with a .ics attachment.
4) Try to view any message.

Actual Results:  
No messages can be viewed.

Expected Results:  
The messages should display as normal.
Comment 1 Laurent Montel 2011-12-20 08:31:51 UTC
I can confirm it
will look at it
Comment 2 Laurent Montel 2011-12-20 08:52:04 UTC
Git commit 9369310ab6c8a697035125186d925ccbc3bfe858 by Montel Laurent.
Committed on 20/12/2011 at 09:51.
Pushed by mlaurent into branch 'master'.

Bug 288338 - Kmail breaks on .ics file attachments if no calendar resource is available.

FIXED-IN: 4.8
BUG: 288338

M  +15   -8    calendarsupport/next/incidencefetchjob.cpp

http://commits.kde.org/kdepim/9369310ab6c8a697035125186d925ccbc3bfe858
Comment 3 Laurent Montel 2011-12-20 08:54:47 UTC
Git commit 99c68539699cf2af57ed4b032e47104a606b3f01 by Montel Laurent.
Committed on 20/12/2011 at 09:51.
Pushed by mlaurent into branch 'KDE/4.7'.

Bug 288338 - Kmail breaks on .ics file attachments if no calendar resource is available.

FIXED-IN: 4.8
BUG: 288338
(cherry picked from commit 9369310ab6c8a697035125186d925ccbc3bfe858)

Conflicts:

	calendarsupport/next/incidencefetchjob.cpp

M  +17   -8    calendarsupport/next/incidencefetchjob.cpp

http://commits.kde.org/kdepim/99c68539699cf2af57ed4b032e47104a606b3f01