Bug 288338 - Kmail breaks on .ics file attachments if no calendar resource is available.

FIXED-IN: 4.8
BUG: 288338
(cherry picked from commit 9369310ab6c8a697035125186d925ccbc3bfe858)

Conflicts:

	calendarsupport/next/incidencefetchjob.cpp